fixed html left panel

--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
 
         <div id="canvas-container" class="canvas-cont" style="border-style: solid;"></div>
 
-        <!-- <div id="other-controls" class="alt-control-cont">
+        <div id="other-controls" class="alt-control-cont">
             <span>Upload Quantity Files: </span>
             <input type="file" id="quant-file-upload" class="slider-input" accept=".json" multiple>
             <br>
@@ -210,7 +210,7 @@
             <br>
 
 
-        </div> -->
+        </div>
     </div>
 
     <script src="dom_callbacks.js"></script>
